Spacing fixed in the whole app

--- a/src/assets/scss/intelligence/_transactionHistory.scss
+++ b/src/assets/scss/intelligence/_transactionHistory.scss
@@ -7,7 +7,7 @@
     .ShowDust {
       text-align: left;
       margin-top: -42px;
-      margin-bottom: 3rem;
+      margin-bottom: 4rem;
 
       p {
         display: inline;
