--- a/src/assets/scss/portfolio/_portfolio.scss
+++ b/src/assets/scss/portfolio/_portfolio.scss
@@ -1,6 +1,3 @@
-.portfolio-container {
-  // width: 80%;
-}
 .defiMenu {
   filter: opacity(0.5);
   &:hover {
@@ -25,7 +22,6 @@
 
 .portfolio-page-section {
   // display: flex;
-
   .portfolio-section {
     position: relative;
 
@@ -758,7 +754,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding-top: 2rem;
     // padding-bottom: 5rem;
 
     .overview-heading {
